--- a/3dcardLOL/index.html
+++ b/3dcardLOL/index.html
@@ -16,18 +16,69 @@
     <section class="card">
       <div class="wrapper">
         <img
-          src="./images/Gragas_1.jpg"
+          src="./images/jett/maxresdefault (1).jpg"
           alt="background image gragas lol"
           class="cover-image"
         />
       </div>
       <img
-        src="./images/LOL_Logo.png"
-        alt="logo league of legends"
-        class="logo"
+        src="./images/jett/600px-Jett_Artwork.png"
+        alt="character gragas"
+        class="character"
       />
+    </section>
+    <section class="card">
+      <div class="wrapper">
+        <img
+          src="./images/skye/6292d525f11efc5f69f51b3519cb9873c4a533a7-1920x1080.jpg"
+          alt="background image gragas lol"
+          class="cover-image"
+        />
+      </div>
       <img
-        src="./images/Gragas_2.png"
+        src="./images/skye/Skye_Artwork_Full.webp"
+        alt="character gragas"
+        class="character skye"
+      />
+    </section>
+    <section class="card">
+      <div class="wrapper">
+        <img
+          src="./images/cypher/VALORANT-Cypher.jpg"
+          alt="background image gragas lol"
+          class="cover-image"
+        />
+      </div>
+      <img
+        src="./images/cypher/Cypher_-_Full_body.webp"
+        alt="character gragas"
+        class="character"
+      />
+    </section>
+    <section class="card">
+      <div class="wrapper">
+        <img
+          src="./images/killjoin/how-to-play-killjoy-valorant.jpg"
+          alt="background image gragas lol"
+          class="cover-image"
+        />
+      </div>
+      <img
+        src="./images/killjoin/Killjoy_-_Full_body.webp"
+        alt="character gragas"
+        class="character"
+      />
+    </section>
+    <section class="card">
+      <div class="wrapper">
+        <img
+          src="./images/omem/men-valorant-habilidades-dicas-como-jogar.jpg"
+          alt="background image gragas lol"
+          class="cover-image"
+        />
+      </div>
+      <img
+        src="./images/omem/Omen_-_Full_body.webp"
         alt="character gragas"
         class="character"
       />
